--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,15 @@
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "telegram-bot/api": "^2.3",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.20",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "telegram-bot/api": "^2.3"
     },
     "autoload": {
         "psr-4": {
